SLCORE-642 replace hotspots methods with rpc